[workspace]
members = [
    "kernel",
    "bootloader",
    "libx64",

    "klib/kcore",  
    "klib/kalloc",
    "klib/kio",

    "konsole",
    "protocols",

    "utils/bitfield",
    "utils/interrupt_list",
    "utils/qemu_logger",
    "utils/mais",
    
    "drivers/page_mapper",
    "drivers/scheduler",
    "drivers/pic",
    "drivers/keyboard",
    "drivers/vga",
    "drivers/vesa",
    "drivers/serialuart16550",
]

exclude = [
    "utils/tracing"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = false
debug = true
overflow-checks = true
