[workspace]
members = [
    "kernel",
    "bootloader",
    "libx64",

    "klib/kcore",  
    "klib/kalloc",
    "klib/kio",

    "konsole",
    "protocols",

    "utils/bitfield",
    "utils/interrupt_list",
    "utils/qemu_logger",
    "utils/mais",
    
    "drivers/page_mapper",
    "drivers/scheduler",
    "drivers/pic",
    "drivers/keyboard",
    "drivers/vga",
    "drivers/vesa",
    "drivers/serialuart16550",
]

[workspace.dependencies]
kernel = { path = "kernel" }
bootloader = { path = "bootloader" }
libx64 = { path = "libx64" }

# ----- klib
kcore = { path = "klib/kcore" }
kalloc = { path = "klib/kalloc" }
kio = { path = "klib/kio" }

protocols = { path = "protocols" }

# ----- utils
bitfield = { path = "utils/bitfield" }
interrupt_list = { path = "utils/interrupt_list" }
qemu_logger = { path = "utils/qemu_logger" }
mais = { path = "utils/mais" }

# ----- drivers
page_mapper = { path = "drivers/page_mapper" }
scheduler = { path = "drivers/scheduler" }
pic = { path = "drivers/pic" }
keyboard = { path = "drivers/keyboard" }
vga = { path = "drivers/vga" }
vesa = { path = "drivers/vesa" }
serialuart16550 = { path = "drivers/serialuart16550" }

[workspace.dependencies.xmas-elf]
version = "0.8"

[workspace.dependencies.crossbeam-queue]
version = "0.3"
default-features = false

[workspace.dependencies.futures-util]
version = "0.3"
default-features = false

[workspace.dependencies.rkyv]
version = "0.7"
features = ["size_32", "strict"]
default-features = false

[workspace.dependencies.bytes]
version = "1"

[workspace.dependencies.bitflags]
version = "1"
default-features = false

[workspace.dependencies.tracing]
git = "https://github.com/tokio-rs/tracing"
default-features = false

[workspace.dependencies.tracing-core]
git = "https://github.com/tokio-rs/tracing"
default-features = false


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = false
debug = true
overflow-checks = true
