[package]
name = "bootloader"
version = "0.10.11"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
license = "MIT/Apache-2.0"
description = "An experimental x86_64 bootloader that works on both BIOS and UEFI systems."
repository = "https://github.com/rust-osdev/bootloader"
edition = "2021"
build = "build.rs"

[[bin]]
name = "builder"
required-features = ["builder"]

[[bin]]
name = "bios"
required-features = ["bios_bin"]

[dependencies]
log = { version = "0.4.8", optional = true, features = ["max_level_debug"] }
qemu_logger = { path = "../utils/qemu_logger", optional = true }

xmas-elf = { version = "0.6.2", optional = true }
argh = { version = "0.1.3", optional = true }
llvm-tools = { version = "0.1.1", optional = true }
thiserror = { version = "1.0.20", optional = true }
json = { version = "0.12.4", optional = true }
rsdp = { version = "1.0.0", optional = true }

libx64 = { path = "../libx64", optional = true }
page_mapper = { path = "../drivers/page_mapper", optional = true }


[build-dependencies]
llvm-tools-build = { version = "0.1", optional = true, package = "llvm-tools" }
toml = { version = "0.5.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
quote = { version = "1.0", optional = true}
proc-macro2 = { version = "1.0", optional = true }

[features]
default = []
builder = ["argh", "thiserror", "llvm-tools", "json"]
bios_bin = ["binary", "rsdp"]
binary = [
    "llvm-tools-build", "toml", "xmas-elf", "log",
    "serde", "quote", "proc-macro2", "qemu_logger", "libx64", "page_mapper"
]
