[package]
name = "bootloader"
version = "0.10.11"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
license = "MIT/Apache-2.0"
description = "An experimental x86_64 bootloader that works on both BIOS and UEFI systems."
repository = "https://github.com/rust-osdev/bootloader"
edition = "2021"
build = "build.rs"


[[bin]]
name = "bios"
required-features = ["bios_bin"]

[dependencies]
tracing = { path = "../utils/tracing/tracing", features=["attributes"], optional = true, default-features = false }
qemu_logger = { path = "../utils/qemu_logger", optional = true }

xmas-elf = { version = "0.8", optional = true }
rsdp = { version = "1.0.0", optional = true }

libx64 = { path = "../libx64", optional = true }
page_mapper = { path = "../drivers/page_mapper", optional = true }


[build-dependencies]
llvm-tools-build = { version = "0.1", optional = true, package = "llvm-tools" }
toml = { version = "0.5.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
quote = { version = "1.0", optional = true}
proc-macro2 = { version = "1.0", optional = true }

[features]
default = []
bios_bin = ["binary", "rsdp"]
binary = [
    "llvm-tools-build", "toml", "xmas-elf", "tracing",
    "serde", "quote", "proc-macro2", "qemu_logger", "libx64", "page_mapper"
]
