cargo-features = ["workspace-inheritance"]

[package]
name = "bootloader"
version = "0.10.11"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
license = "MIT/Apache-2.0"
description = "An experimental x86_64 bootloader that works on both BIOS and UEFI systems."
repository = "https://github.com/rust-osdev/bootloader"
edition = "2021"
build = "build.rs"


[[bin]]
name = "bios"
required-features = ["bios_bin"]

[dependencies]
tracing = { workspace = true, features=["attributes"], optional = true }
qemu_logger = { workspace = true, optional = true }
libx64 = { workspace = true, optional = true }
page_mapper = { workspace = true, optional = true }

xmas-elf = { version = "0.8", optional = true }
rsdp = { version = "1.0.0", optional = true }



[build-dependencies]
llvm-tools-build = { version = "0.1", optional = true, package = "llvm-tools" }
toml = { version = "0.5.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
quote = { version = "1.0", optional = true}
proc-macro2 = { version = "1.0", optional = true }

[features]
default = []
bios_bin = ["binary", "rsdp"]
binary = [
    "llvm-tools-build", "toml", "xmas-elf", "tracing",
    "serde", "quote", "proc-macro2", "qemu_logger", "libx64", "page_mapper"
]
