[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name="kernel"
test=false

[features]

[dependencies]
bootloader = {path="../bootloader"}

libx64 = {path = "../libx64"}
kcore = {path = "../klib/kcore", features=["alloc"]}
kalloc = {path = "../klib/kalloc"}

# ----- DRIVERS -----
page_mapper = {path = "../drivers/page_mapper"}
scheduler = {path = "../drivers/scheduler"}
pic = {path = "../drivers/pic"}
keyboard = {path = "../drivers/keyboard"}
vesa = {path = "../drivers/vesa"}
serialuart16550 = {path = "../drivers/serialuart16550"}

# ----- UTILS -----
bitflags = {version="1", default-features=false}
tracing = {path = "../utils/tracing/tracing", default-features=false, features=[]}
interrupt_list = {path = "../utils/interrupt_list", features=["libx64"]}
qemu_logger = {path = "../utils/qemu_logger"}
