cargo-features = ["workspace-inheritance"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name="kernel"
test=false

[features]

[dependencies]
bootloader = { workspace = true }

libx64 = { workspace = true }
kcore = {workspace = true, features=["alloc"]}
kalloc = { workspace = true }

# ----- DRIVERS -----
page_mapper = { workspace = true }
scheduler = { workspace = true }
pic = { workspace = true }
keyboard = { workspace = true }
vesa = { workspace = true }
serialuart16550 = { workspace = true }

# ----- UTILS -----
tracing = { workspace = true }
interrupt_list = { workspace = true, features=["libx64"] }
qemu_logger = { workspace = true }

[dependencies.bitflags]
workspace = true

