cargo-features = ["workspace-inheritance"]

[package]
name = "konsole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mais = { workspace = true }
protocols = { workspace = true, features = ["log", "alloc"], default-features=false }
kcore = { workspace = true }

[dependencies.bytes]
workspace = true

[dependencies.rkyv]
workspace = true

[dependencies.tokio]
version = "1"
features = ["net", "rt", "macros", "io-util", "io-std", "time", "tracing", "parking_lot"]
default-features=false

[dependencies.tokio-util]
version = "0.7"
features = ["codec", "tracing"]
default-features=false

