cargo-features = ["workspace-inheritance"]

[package]
name = "libx64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { workspace = true }
bitfield = { workspace = true }
tracing = {workspace = true, features=["attributes"]}
