[package]
name = "protocols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
alloc = ["rkyv/alloc"]
log = []

[dependencies.rkyv]
version = "0.7"
features = ["size_32", "strict"]
default-features = false

[dev-dependencies.rkyv]
version = "0.7"
features = ["size_32", "strict", "validation"]

[dev-dependencies.bytecheck]
version = "0.6.8"
