cargo-features = ["workspace-inheritance"]

[package]
name = "protocols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
alloc = ["rkyv/alloc"]
log = []

[dependencies]
rkyv = { workspace = true, default-features = false }

[dev-dependencies]
rkyv = { workspace = true, features = ["size_32", "strict", "validation"]}
bytecheck = "0.6"
