cargo-features = ["workspace-inheritance"]

[package]
name = "page_mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true, features=["attributes"] }
libx64 = { workspace = true }
