[package]
name = "vesa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kcore = { path="../../klib/kcore" }
libx64 = { path="../../libx64" }
bootloader = { path = "../../bootloader" }
log = "0.4"

[dependencies.noto-sans-mono-bitmap]
version = "0.1.2"
default-features = false
features = ["regular", "size_14"]
