cargo-features = ["workspace-inheritance"]

[package]
name = "vesa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kcore = { workspace = true }
libx64 = { workspace = true }
bootloader = { workspace = true }

[dependencies.noto-sans-mono-bitmap]
version = "0.1.2"
default-features = false
features = ["regular", "size_14"]
