cargo-features = ["workspace-inheritance"]

[package]
name = "kalloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { workspace = true }
libx64 = { workspace = true }

[dev-dependencies]
kcore = { workspace = true}
