[package]
name = "kcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
alloc = ["kalloc", "crossbeam-queue/alloc", "futures-util/alloc"]

[dependencies]
libx64 = { path="../../libx64" }
log = {version = "0.4"}
kalloc = {path = "../kalloc", optional=true}
crossbeam-queue = {version = "0.3", default-features=false }
futures-util = {version = "0.3", default-features=false }
