cargo-features = ["workspace-inheritance"]

[package]
name = "kcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
alloc = ["kalloc", "crossbeam-queue/alloc", "futures-util/alloc"]

[dependencies]
libx64 = { workspace = true }
kalloc = {workspace = true, optional=true}
crossbeam-queue = { workspace = true }
futures-util = { workspace = true }
