[package]
name = "interrupt_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro=true

[dependencies]
syn = {version="1", features=["full"]}
quote = {version="1"}
proc-macro2 = {version="1"}

libx64 = {path = "../../libx64", optional=true}
