[package]
name = "qemu_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version="0.4", default-features=false}

serialuart16550 = {path = "../../drivers/serialuart16550"}
kcore = {path = "../../kcore"}
