cargo-features = ["workspace-inheritance"]

[package]
name = "qemu_logger"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-core = {workspace = true}
rkyv = { workspace = true, default-features = false }

serialuart16550 = { workspace = true }
kcore = { workspace = true }
kio = { workspace = true }
libx64 = { workspace = true }
mais = { workspace = true }
protocols = { workspace = true, features=["log"], default-features=false}
